<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <!-- Campo para el correo -->
    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp" />

    <!-- Campo para la contraseña -->
    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

    <!-- Botón para registrarse -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@android:color/white" />

    <!-- Enlace para iniciar sesión -->
    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_prompt"
        android:textColor="@color/design_default_color_secondary"
        android:textStyle="bold" />

</LinearLayout>
