<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Switch para habilitar Swipe to Delete -->
    <Switch
        android:id="@+id/switch_swipe_to_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_swipe_to_delete"
        android:checked="true"
        android:layout_marginBottom="24dp" />

    <!-- Botón de Acerca de -->
    <Button
        android:id="@+id/button_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_about"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@android:color/white" />

    <!-- Botón de Cerrar Sesión -->
    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_logout"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@android:color/white" />

    <!-- Idioma -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:entries="@array/language_options" />
</LinearLayout>

